--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body{
   line-height: 1.5;
   color: #000;
   background-color: rgba(233, 245, 255, 0.87);
+  height: 100vh;
 }
 
 .error-page-wraper {
@@ -330,6 +331,7 @@ footer{
   display: flex;
   flex-wrap: wrap;
   padding-top: 0.3em;
+  margin-top: 4.8em;
   justify-content: space-between;
   background-color: rgba(249, 253, 253, 0.589);
   box-shadow: 2px 0px 2px slategray;
