--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body{
 .header-wraper{
   position: sticky;
   top: 0;
+  bottom: 9;
   display: flex;
   flex-wrap: wrap;
   padding: 1em;
@@ -63,7 +64,7 @@ header{
 .header-elements ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 2em;
+  gap: 1.5em;
 }
 .header-elements ul > li {
   list-style: none;
@@ -90,6 +91,7 @@ header{
 .welcome, .welcome_2{
   display: flex;
 }
+
 .welcome-text{
   align-self: center;
 }
@@ -196,6 +198,12 @@ hr.divider{
   color: rgb(2, 184, 184);
 }
 
+.welcome-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .semester-choice ul{
   display: flex;
   flex-wrap: wrap;
@@ -227,22 +235,32 @@ hr.divider{
 
 .doc-item{
   display: flex;
+  flex-direction: column;
   gap: 1em;
   padding: 0.7em;
   background-color: rgb(244, 250, 255);
   box-shadow: 0px 0px 4px brown;
   border-radius: 5px;
 }
+.doc-img-and-name{
+  display: flex;
+  gap: 1em;
+}
+.doc-img-and-name p {
+  align-self: center;
+}
 .doc-item p {
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.1rem;
 }
 .doc-item a{
+  display: flex;
+  justify-content: center;
   text-decoration: none;
   color: #000;
   background-color: aliceblue;
   border: 1px dotted red;
-  padding: 0.7em;
+  padding: 0.5em;
   border-radius: 5px;
   box-shadow: 2px 0px 2px brown;
   transition: all 0.2s ease-in-out;
@@ -323,7 +341,7 @@ hr.divider{
   outline: none;
   border: 1px solid silver;
   border-radius: 15px;
-  padding: 0.4em;
+  padding: 0.2em;
   box-shadow: 0px 0px 4px brown;
   color: #cf032f;
   transition: all 0.2s ease-in-out;
@@ -365,9 +383,14 @@ footer{
 
 @media screen and (max-width: 476px) {
 
+  .header-elements ul > a {
+    padding: 0.3em;
+  }
+
   .welcome {
     flex-direction: column;
   }
+
   .welcome_2{
     flex-direction: column;
   }
