--- a/src/index.css
+++ b/src/index.css
@@ -486,6 +486,10 @@ footer{
     padding-right: 0.9em;
   }
 
+  #my, #my-courses{
+    padding-top: 3.9em;
+  }
+
   .header-elements ul > a {
     padding: 0.3em;
   }
