--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,10 @@ body{
 
 .Info-holder{
   position: fixed;
-  height: 100dvh;
+  min-height: 100vh;
   width: 100%;
   background-color: rgba(12, 8, 8, 0.719);
+  backdrop-filter: blur(23px);
   z-index: 1000;
   display: flex;
   justify-content: center;
@@ -51,21 +52,110 @@ body{
 .info-body p {
   font-size: clamp(1.1rem, 1.5vw, 1.5rem);
 }
-.leave{
-  align-self: flex-end;
+.leave {
+  display: flex;
+  justify-content: space-between;
 }
-.leave button {
+.hi-btn {
+  outline: none;
+  border: none;
+  color: #000;
+  background-color: aliceblue;
+  border-radius: 3px;
+  visibility: hidden;
+}
+#click-here {
+  margin-top: 1em;
+  text-align: center;
+}
+
+#prev-btn, #prev-btn-2 {
+  cursor: pointer;
+  outline: none;
+  border: 1px solid silver;
+  padding: 0.5em;
+  border-radius: 5px;
+  background-color: #fff;
+  color: #cf032f;
+
+  &:hover {
+    color: #fff;
+    background-color: #cf032f;
+  }
+}
+#next-btn, #next-btn-2, #close-btn {
+  cursor: pointer;
   outline: none;
   border: none;
   padding: 0.5em;
   border-radius: 5px;
   background-color: #cf032f;
   color: #fff;
+  transition: all 0.2s ease-in-out;
+   &:hover {
+    border: 1px solid silver;
+    color: #cf032f;
+    background-color: #fff;
+   }
 }
-.leave button:hover{
-  color: #cf032f;
-  background-color: #fff;
-  box-shadow: 0px 0px 3px brown;
+
+#second-welcome-message, #integrate-whatsapp {
+  display: none;
+}
+.whatsapp-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  align-items: center;
+}
+#whatsapp-icon {
+  fill: currentColor;
+  height: 22px;
+}
+.whatsapp-content-2 {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+.whatsapp-content-2 a {
+  font-weight: 600;
+  text-decoration: none;
+  color: #fff;
+  background-color: green;
+  padding: 0.5em;
+  border: 2px solid lightgreen;
+  border-radius: 20px;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    color: green;
+    background-color: aliceblue;
+  }
+}
+.whatsapp-content a {
+  font-weight: 600;
+  text-decoration: none;
+  color: #fff;
+  background-color: green;
+  padding: 0.3em;
+  border: 2px solid aliceblue;
+  border-radius: 5px;
+  animation: nice 1s linear alternate infinite;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    color: green;
+    background-color: aliceblue;
+  }
+}
+@keyframes nice {
+  0% {
+    box-shadow: 2px 0px 3px red, 0px 2px 3px rgb(70, 0, 128), -2px 0px 3px blue, 0px -2px 3px rgb(248, 224, 4);
+  }
+  100% {
+    box-shadow: 2px 0px 3px rgb(70, 0, 128), 0px 2px 3px yellow, -2px 0px 3px red, 0px -2px 3px rgb(51, 255, 0);
+  }
+}
+#e-crew-icon {
+  margin-top: -1em;
+  border-radius: 50%;
 }
 .error-page-wraper {
   display: flex;
