--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ body{
   fill: currentColor;
   height: 22px;
 }
-.whatsapp-content-2 {
+.whatsapp-content-2, .average-content{
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
@@ -128,6 +128,22 @@ body{
   &:hover {
     color: green;
     background-color: aliceblue;
+  }
+}
+.average-content a {
+  font-weight: 600;
+  text-decoration: none;
+  color: #000;
+  background-color: rgb(255, 243, 190);
+  padding: 0.5em;
+  border: 1px solid brown;
+  box-shadow: 0px 0px 9px brown;
+  border-radius: 20px;
+  transition: all 0.2s ease-in-out;
+  &:hover {
+    color: brown;
+    background-color: #f8f8f8;
+    box-shadow: 0px 0px 9px rgb(255, 243, 190);
   }
 }
 .whatsapp-content a {
@@ -666,6 +682,10 @@ footer{
   }
   #member{
     padding: 1em;
+  }
+
+  .average-content {
+    margin-left: 0.7em;
   }
 
   .welcome {
