--- a/src/index.css
+++ b/src/index.css
@@ -934,6 +934,121 @@ hr.divider{
   box-shadow: 0px 0px 6px brown;
 }
 
+#welcome-pod {
+  font-size: clamp(1.5rem, 2.2vw, 2rem);
+}
+
+
+.podcast-wrapper {
+  margin-top: 7em;
+  display: flex;
+  justify-content: center;
+}
+.podcast-message{
+  align-self: center;
+}
+.podcast-message p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  font-size: clamp(1.3rem, 2vw, 1.5rem);
+}
+.podcast-picture-wrapper img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
+  filter: drop-shadow(0px 0px 4px gray);
+  -webkit-filter: drop-shadow(0px 0px 4px gray);
+  transition: all 0.2s ease-in-out;
+}
+
+#important-item-wrapper, #important-item-wrapper-2 {
+  position: relative;
+}
+
+#important-item::before{
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  background-image: linear-gradient(95deg, rgba(0, 217, 255, 0.274), rgba(134, 4, 80, 0.274));
+  z-index: -1;
+}
+
+#important-item-2{
+  text-decoration: underline dashed rgb(168, 2, 79);
+  text-underline-offset: 7px;
+  text-decoration-thickness: 2px;
+}
+
+.podcast-semester-wrapper {
+  display: flex;
+  justify-content: center;
+}
+#podcast-semester {
+  text-align: center;
+  padding: 5px;
+  background-color: #fafaf64d;
+  border-top: 3px double rgb(197, 76, 7);
+  border-bottom: 4px dashed #00218d;
+  border-radius: 10px;
+  box-shadow: inset 2px 2px 2px silver;
+}
+
+.podcast-semesters-options {
+  margin-top: 2em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2em;
+}
+
+.podcast-semesters-options label {
+  cursor: pointer;
+  background-color: #ffffffa4;
+  box-shadow: 2px 2px 3px rgb(41, 1, 114);
+  border: 1px solid #ccc;
+  padding: 0.5em;
+}
+
+.cours-podcasts-holder {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2em;
+}
+.cours-podcast {
+  background-image: linear-gradient(to left, rgba(128, 0, 128, 0.123), #cccccc52, rgba(147, 232, 243, 0.822)), url("/stars.png");
+  padding: 0.5em;
+  border-radius: 5px;
+  box-shadow: 0px 0px 9px rgba(119, 136, 153, 0.726);
+}
+.cours-podcast-header p {
+  background-color: #ffffffb4;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-style: italic;
+  padding: 0.3em 0.5em;
+  border-radius: 0.2em;
+  backdrop-filter: blur(2px);
+}
+
+.cours-podcast-body p {
+  background-color: #ffffffb4;
+  backdrop-filter: blur(2px);
+  font-size: 1rem;
+  padding: 0.3em 0.5em;
+  border-radius: 0.2em;
+}
+.podcast-underliner {
+  text-decoration: underline wavy rgb(100, 1, 42);
+  text-underline-offset: 5px;
+  text-decoration-thickness: 2px;
+}
+
+
 #install-banner {
   position: fixed;
   top: 0;
@@ -1169,6 +1284,14 @@ footer{
 
   .header-wraper-home{
     gap: 0.3em;
+  }
+
+  .podcast-wrapper {
+    margin-top: 11em;
+    flex-wrap: wrap;
+  }
+  .podcast-picture-wrapper img {
+    margin-top: -2em;
   }
 
   .header-elements {
