--- a/src/index.css
+++ b/src/index.css
@@ -690,6 +690,26 @@ header{
   }
 }
 
+.closing-banner {
+  align-self: flex-end;
+}
+
+#closing-banner {
+  cursor: pointer;
+  background-color: #4b4a4a;
+  color: #fff;
+  outline: none;
+  border: 1px solid rgb(243, 241, 241);
+  padding: 0.3em;
+  border-radius: 0.3em;
+  margin-bottom: 1em;
+  &:hover {
+    background-color: #333333;
+    color: #fff;
+    border: 1px solid rgb(243, 241, 241);
+  }
+}
+
 .user-name-holder{
   position: fixed;
   z-index: 1000;
