--- a/src/index.css
+++ b/src/index.css
@@ -1331,7 +1331,7 @@ footer{
   width: 300px;
   border-radius: 10px;
   box-shadow: 0px 0px 5px rgba(165, 42, 42, 0.479);
-  background-image: linear-gradient(to left, #00000034, rgba(41, 30, 73, 0.288)), url("Nice.jpeg");
+  background-image: linear-gradient(to left, #00000034, rgba(41, 30, 73, 0.288)), url("/Nice.jpeg");
   background-position: center;
   background-size: cover;
 }
