--- a/src/index.css
+++ b/src/index.css
@@ -187,7 +187,7 @@ body{
 .header-wraper{
   position: fixed;
   top: 0;
-  padding: 0.7em;
+  padding: 0.3em;
   width: 100%;
   background-color: aliceblue;
   box-shadow: 4px 0px 4px brown;
@@ -195,18 +195,21 @@ body{
 }
 .header-holder{
   display: flex;
-  padding: 0em 1em;
+  padding: 0em 0.5em;
   flex-wrap: wrap;
-  gap: 0.5em;
   justify-content: space-between;
+  gap: 0.5em;
 }
 .header-wraper-home{
-  position: sticky;
-  top: 0;
   display: flex;
   flex-wrap: wrap;
-  padding: 1em;
-  gap: 9em;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0.7em;
   background-color: aliceblue;
   box-shadow: 4px 0px 4px brown;
   z-index: 2;
@@ -214,12 +217,8 @@ body{
 
 header{
   display: inline-flex;
-  gap: 1em;
-}
-
-.elearning-member-wrapper {
-  align-self: center;
-  margin-top: -1em;
+  align-items: center;
+  gap: 0.5em;
 }
 
 .elearning-member {
@@ -243,15 +242,16 @@ header{
 }
 #member{
   font-family: Lora-Italic-VariableFont_wght;
+  text-align: center;
 }
 #answers-header{
   margin-top: 0.5em;
 }
 .header-elements {
-  margin: 0em -1em;
-  padding-right: 0.5em;
+  margin-top: 0em;
 }
 .header-elements ul {
+  margin-top: 1em;
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
@@ -1068,6 +1068,10 @@ hr.divider{
   text-decoration-thickness: 2px;
 }
 
+.guide-msg {
+  margin-top: 8em;
+}
+
 
 #install-banner {
   position: fixed;
@@ -1225,15 +1229,21 @@ hr.divider{
 
 footer{
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 0.5em;
+  padding: 0.3em;
   margin-top: 4.8em;
   background-color: rgba(249, 253, 253, 0.589);
   box-shadow: 2px 0px 2px slategray;
 }
+.header-footer {
+  display: inline-flex;
+  gap: 0.5em;
+}
 .footer-second-part{
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   gap: 1em;
 }
@@ -1422,7 +1432,24 @@ footer{
 /* ============================ */
 /* ============================ */
 
+@media screen and (min-width: 768px) {
+  .welcome-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 476px) {
+
+  .elearning-member-wrapper {
+    padding-bottom: 0.6em;
+  }
+
+  .guide-msg {
+    margin-top: 19em;
+  }
 
   .header-wraper-home{
     gap: 0.3em;
@@ -1464,6 +1491,10 @@ footer{
   .welcome {
     flex-direction: column;
     margin-top: 20em;
+  }
+
+  .welcome-footer, .normal-footer {
+    padding-top: 1em;
   }
 
   .privacy {
