--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body{
 
 .Info-holder{
   position: fixed;
+  top: 0;
   min-height: 100vh;
   width: 100%;
   background-color: rgba(12, 8, 8, 0.719);
