--- a/src/index.css
+++ b/src/index.css
@@ -236,6 +236,10 @@ header{
   margin-top: 8em;
 }
 
+.member-stars {
+  padding: 0.3em;
+}
+
 .elearning-member {
   cursor: pointer;
   background-image: linear-gradient(195deg, rgb(207, 253, 253), rgb(229, 218, 255));
@@ -1394,7 +1398,7 @@ footer{
       }
 }
 .video-title {
-  margin-top: 2em;
+  margin-top: 8em;
   display: flex;
   justify-content: center;
 }
