--- a/src/index.css
+++ b/src/index.css
@@ -1397,6 +1397,23 @@ footer{
         box-shadow: 0px 0px 5px rgba(165, 42, 42, 0.479);
       }
 }
+#survey-link {
+  text-align: center;
+  text-decoration: none;
+  color: rgb(1, 1, 102);
+  background-color: #ffffff1f;
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+  padding: 0.3em;
+  border-radius: 5px;
+  box-shadow: 0px 1px 1px slategrey;
+  transition: all 0.2s ease-in-out;
+    &:hover {
+      color: #ffffff;
+        background-color: rgb(1, 1, 102);
+        box-shadow: 0px 0px 5px rgba(165, 42, 42, 0.479);
+      }
+}
 .video-title {
   margin-top: 8em;
   display: flex;
@@ -1513,6 +1530,11 @@ footer{
 /* ============================ */
 /* ============================ */
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .sign-up-and-in-holder {
+    margin-top: 15em;
+  }
+}
 @media screen and (min-width: 768px) {
   .welcome-footer {
     position: fixed;
