--- a/src/index.css
+++ b/src/index.css
@@ -233,7 +233,7 @@ header{
 }
 
 .sign-up-and-in-holder {
-  margin-top: 8em;
+  margin-top: 7em;
 }
 
 .member-stars {
@@ -317,6 +317,65 @@ header{
   bottom: 0;
   z-index: -1;
   background-color: rgb(209, 216, 255);
+}
+
+.contribute-msg {
+  line-height: 1.5em;
+}
+.highlighter-holder {
+  position: relative;
+}
+#large-highlight{
+  background-color: #fff;
+  color: rgb(15, 153, 3);
+  padding: 0em 0.1em;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px #0000005e;
+}
+#rich-highlight{
+  color: rgb(172, 136, 21);
+  background-color: #fff;
+  padding: 0em 0.2em;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px #0000005e;
+}
+#useful-highlight{
+  color: rgb(2, 34, 138);
+  background-color: #fff;
+  padding: 0em 0.2em;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px #0000005e;
+}
+#collection-highlight{
+  color: rgb(190, 6, 120);
+  background-color: #fff;
+  padding: 0em 0.2em;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px #0000005e;
+  box-decoration-break: clone;
+}
+
+#exam-papers-link {
+  color: rgb(190, 6, 120);
+  text-decoration: none;
+  font-weight: bold;
+  padding: 0.5em;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-bottom: 2px solid rgb(190, 6, 120);
+  background-color: rgba(255, 255, 255, 0.8);
+  transition: all 0.3s ease-in-out;
+  text-align: center;
+  cursor: pointer;
+  &:hover {
+    background-color: rgb(190, 6, 120);
+    color: #fff;
+    border-bottom: 2px solid #fff;
+  }
+}
+
+#exam-papers-icon {
+  color: rgb(2, 34, 138);
 }
 
 .test-wraper {
@@ -1152,6 +1211,9 @@ hr.divider{
   margin-top: 8em;
 }
 
+.contribute-msg-holder {
+  margin-top: 7em;
+}
 
 #install-banner {
   position: fixed;
@@ -1416,7 +1478,6 @@ footer{
       }
 }
 .video-title {
-  margin-top: 8em;
   display: flex;
   justify-content: center;
 }
@@ -1531,11 +1592,6 @@ footer{
 /* ============================ */
 /* ============================ */
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
-  .sign-up-and-in-holder {
-    margin-top: 15em;
-  }
-}
 @media screen and (min-width: 768px) {
   .welcome-footer {
     position: fixed;
@@ -1552,7 +1608,7 @@ footer{
   }
 
   .sign-up-and-in-holder {
-  margin-top: 17em;
+  margin-top: 14em;
 }
 
   .e-member-picture-holder {
@@ -1563,6 +1619,10 @@ footer{
   .guide-msg {
     margin-top: 19em;
   }
+
+  .contribute-msg-holder {
+  margin-top: 14em;
+}
 
   .header-wraper-home{
     gap: 0.3em;
