--- a/src/index.css
+++ b/src/index.css
@@ -1621,6 +1621,24 @@ footer{
   }
 }
 
+@media screen and (min-width: 694px) and (max-width: 994px){
+  .guide-msg{
+    margin-top: 12em;
+  }
+}
+
+@media screen and (min-width: 477px) and (max-width: 880px){
+  .welcome_2{
+    margin-top: 17em;
+  }
+}
+
+@media screen and (min-width: 477px) and (max-width: 693px){
+  .guide-msg{
+    margin-top: 17em;
+  }
+}
+
 @media screen and (max-width: 476px) {
 
   .elearning-member-wrapper {
@@ -1700,7 +1718,7 @@ footer{
 
   .welcome_2{
     flex-direction: column;
-    margin-top: 13em;
+    margin-top: 17em;
   }
   .welcome::before{
     display: none;
